--- a/public/css/sample.css
+++ b/public/css/sample.css
@@ -1,3 +1,35 @@
+html {
+  font-size: 62.5%;
+  font-size: 1em;
+}
+
 header {
-  font-size: 1.5em;
+  font-size: 1rem;
+}
+
+/** id="css-study" */
+#css-study {
+  margin: 1.5em;
+}
+
+/** class="m-block" */
+.m-block:nth-child(2n) {
+  background-color: #DDD;
+}
+
+.m-inline:nth-child(2n) {
+  background-color: #DDD;
+}
+
+
+body div div.test {
+  background-color: #00F !important;
+}
+
+div div.test {
+  background-color: #F00 !important;
+}
+
+div div.test {
+  background-color: #0F0 !important;
 }
